new text and styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="bottom-content">
             <div class="text-content">
                 <p>
-                    Text about the issue...
+                    Luxury meets exploration in an exclusive collaboration between MCM and Sablos. Discover travel tips from cultural icons through our interactive map—unlocking hidden gems, local favorites, and must-visit spots worldwide.
                 </p>
 
                 <a href="#" target="_blank">SUBSCRIBE TO SABIOS</a> or 
